# IracemaAI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
chroma/: chroma.sqlite3
db/: db_management.py
src/: main.py
src/config/: assistant_config.py  ieee_assistant.yaml
src/core/: database.py  embeddings.py  loader.py  resetdb.py  retriever.py  utils.py
tests/: query.py
